@@ -4,6 +4,7 @@
 - added message when starting updating album/artist
 - fix playback speed menu typo
 - fixed square image shape on player
+- added option to show lockscreen
 
 2.0.3
 
